--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@uiw/react-md-editor": "^4.0.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "html2pdf.js": "^0.9.3",
     "inngest": "^3.40.1",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
@@ -34,6 +36,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.60.0",
+    "react-markdown": "^8.0.6",
     "react-spinners": "^0.17.0",
     "recharts": "^3.1.0",
     "sonner": "^2.0.6",
